tests/baselines/reference/functionOverloads9(strict=true).errors.txt
functionOverloads9.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== functionOverloads9.ts (1 errors) ====
    function foo(foo:string);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(foo?:string){ return '' };
    var x = foo('foo');
    